# TicTacToe_Client

./: CMakeLists.txt  main.cpp
common/message/: command_code.h
model/: player.h
src/: resource.qrc
src/common/: base_page.h  websocket_worker.h
src/common/message/: message.h  tools.h
src/translations/: ru.ts
src/ui/: main_window.cpp  main_window.h
src/ui/auth/: login_page.cpp  login_page.h
src/ui/game/: game_item_widget.h  game_page.cpp  game_page.h  lobby_page.cpp  lobby_page.h
tests/: auth_test.cpp  game_test.cpp  lobby_test.cpp
translations/: ru.ts
ui/: main_window.cpp  main_window.h
ui/auth/: login_page.cpp
ui/game/: game_item_widget.h  game_page.cpp  game_page.h  lobby_page.cpp  lobby_page.h
